--- a/src/main/webapp/WEB-INF/view/common/_right.html
+++ b/src/main/webapp/WEB-INF/view/common/_right.html
@@ -59,7 +59,7 @@
          frameborder="0" data-id="${ctxPath}/blackboard" seamless></iframe>
     </div>
     <div class="footer">
-        <div class="pull-right">&copy; 2019 <a href="">diruiCloud</a>
+        <div class="pull-right">&copy; 2020 <a href="">powered by tangxian</a>
         </div>
     </div>
 </div>
