--- a/src/main/webapp/WEB-INF/view/system/user/user_edit.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_edit.html
@@ -37,7 +37,7 @@
 						clickFun="UserInfoDlg.showDeptSelectTree(); return false;"
 						style="background-color: #ffffff !important;"/>
 
-					<!--	<#input id="mobile" name="电话" value="${user.mobile}"/>-->
+						<#input id="mobile" name="手机号" value="${user.mobile}"/>
 					</div>
 				</div>
 			</div>
