--- a/src/main/webapp/WEB-INF/view/system/user/user_view.html
+++ b/src/main/webapp/WEB-INF/view/system/user/user_view.html
@@ -43,7 +43,7 @@
                                                     style="background-color: #ffffff !important;"
                                                     selectFlag="true" selectId="menuContent" selectTreeId="treeDemo" selectStyle="width:250px !important;" disabled="disabled"/>
 -->
-                                            <#input id="linkman" name="联系人" value="${user.linkman!}"/>
+                                            <#input id="mobile" name="手机号" value="${user.mobile}"/>
                                         </div>
                                     </div>
                                 </div>
